[gd_scene load_steps=33 format=3 uid="uid://cer2nel7dtn3r"]

[ext_resource type="Script" path="res://nodos/first_boss/first_boss.gd" id="1_nihfp"]
[ext_resource type="Texture2D" uid="uid://bqh0w6153q0gf" path="res://arte/Assets/prota.png" id="1_sqtby"]
[ext_resource type="Script" path="res://nodos/first_boss/hitbox.gd" id="3_5m5ew"]
[ext_resource type="Script" path="res://nodos/first_boss/state_machine_first_boss.gd" id="3_icmwx"]
[ext_resource type="Script" path="res://nodos/first_boss/attack_1.gd" id="4_y52m6"]
[ext_resource type="Script" path="res://nodos/first_boss/first_phase_initial_state_boss_first_boss.gd" id="4_yhj2j"]
[ext_resource type="Script" path="res://nodos/first_boss/attack_2.gd" id="5_28yyf"]
[ext_resource type="Script" path="res://nodos/first_boss/first_phase_attack1_state_first_boss.gd" id="5_w7trb"]
[ext_resource type="Script" path="res://nodos/first_boss/attack_3.gd" id="6_7d138"]
[ext_resource type="Script" path="res://nodos/first_boss/first_phase_attack2_state_first_boss.gd" id="6_sc8hq"]
[ext_resource type="Script" path="res://nodos/first_boss/attack_4.gd" id="7_7qirs"]
[ext_resource type="Script" path="res://nodos/first_boss/first_phase_window_state_first_boss.gd" id="7_gcbu5"]
[ext_resource type="Script" path="res://nodos/first_boss/break_ceiling_state_first_boss.gd" id="8_3irob"]
[ext_resource type="Script" path="res://nodos/first_boss/break_platforms_state_first_boss.gd" id="9_686sj"]
[ext_resource type="Script" path="res://nodos/first_boss/second_phase_initial_state_boss_first_boss.gd" id="10_4gku6"]
[ext_resource type="Script" path="res://nodos/first_boss/second_phase_attack1_state_first_boss.gd" id="11_g318s"]
[ext_resource type="Script" path="res://nodos/first_boss/second_phase_attack2_state_first_boss.gd" id="12_c31r0"]
[ext_resource type="Script" path="res://nodos/first_boss/second_phase_run_state_boss_first_boss.gd" id="13_7we24"]
[ext_resource type="Script" path="res://nodos/first_boss/second_phase_attack3_state_first_boss.gd" id="13_qi5qb"]
[ext_resource type="Script" path="res://nodos/first_boss/second_phase_attack4_state_first_boss.gd" id="14_3q7rr"]
[ext_resource type="Script" path="res://nodos/first_boss/second_phase_window_state_first_boss.gd" id="15_2bcf7"]
[ext_resource type="Script" path="res://nodos/first_boss/dead_state_first_boss.gd" id="16_cf043"]
[ext_resource type="Script" path="res://nodos/first_boss/first_phase_attack1_area.gd" id="23_glhn1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_annbl"]
radius = 99.8499

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0w2ht"]
radius = 19.0
height = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xab17"]
radius = 40.0125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nsldc"]
size = Vector2(129.625, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7ydp"]
size = Vector2(20, 148)

[sub_resource type="CircleShape2D" id="CircleShape2D_7lxh2"]
radius = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qo2oc"]
size = Vector2(969.75, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_j62ag"]
radius = 102.005

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dwlc"]
size = Vector2(30.5, 8)

[node name="first_boss" type="CharacterBody2D" node_paths=PackedStringArray("position2D")]
collision_layer = 2
collision_mask = 32
script = ExtResource("1_nihfp")
position2D = NodePath("position2D")

[node name="run_area" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="run_area"]
shape = SubResource("CircleShape2D_annbl")
debug_color = Color(0.45098, 0.572549, 0.478431, 0.419608)

[node name="point1" type="Marker2D" parent="."]
position = Vector2(-256, 250)

[node name="point2" type="Marker2D" parent="."]
position = Vector2(650, 250)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32
script = ExtResource("3_5m5ew")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_0w2ht")
debug_color = Color(0.776471, 0.384314, 0.572549, 0.419608)

[node name="position2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="position2D"]
scale = Vector2(0.238462, 0.238462)
texture = ExtResource("1_sqtby")

[node name="attack_1" type="Area2D" parent="position2D"]
position = Vector2(70, 0)
collision_layer = 0
monitoring = false
monitorable = false
script = ExtResource("4_y52m6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="position2D/attack_1"]
shape = SubResource("CircleShape2D_xab17")

[node name="attack_2" type="Area2D" parent="position2D"]
position = Vector2(154, -41)
monitoring = false
monitorable = false
script = ExtResource("5_28yyf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="position2D/attack_2"]
position = Vector2(-65, 0)
shape = SubResource("RectangleShape2D_nsldc")

[node name="attack_3" type="Area2D" parent="position2D"]
position = Vector2(46, -41)
monitoring = false
monitorable = false
script = ExtResource("6_7d138")

[node name="RigidBody2D" type="RigidBody2D" parent="position2D/attack_3"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="position2D/attack_3/RigidBody2D"]
shape = SubResource("RectangleShape2D_g7ydp")

[node name="attack_4" type="Area2D" parent="position2D"]
monitoring = false
monitorable = false
script = ExtResource("7_7qirs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="position2D/attack_4"]
rotation = 1.5708
shape = SubResource("CircleShape2D_7lxh2")

[node name="first_phase_to_attack_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="first_phase_attack1_area" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("23_glhn1")

[node name="line1" type="CollisionShape2D" parent="first_phase_attack1_area"]
position = Vector2(199, -83)
shape = SubResource("RectangleShape2D_qo2oc")

[node name="line2" type="CollisionShape2D" parent="first_phase_attack1_area"]
position = Vector2(199, 51)
shape = SubResource("RectangleShape2D_qo2oc")

[node name="line3" type="CollisionShape2D" parent="first_phase_attack1_area"]
position = Vector2(199, 165)
shape = SubResource("RectangleShape2D_qo2oc")

[node name="first_phase_attack2_area" type="Area2D" parent="."]
collision_layer = 0

[node name="bubble1" type="CollisionShape2D" parent="first_phase_attack2_area"]
position = Vector2(-112, -115)
shape = SubResource("CircleShape2D_j62ag")

[node name="bubble2" type="CollisionShape2D" parent="first_phase_attack2_area"]
position = Vector2(-103, 76)
shape = SubResource("CircleShape2D_j62ag")

[node name="bubble3" type="CollisionShape2D" parent="first_phase_attack2_area"]
position = Vector2(139, 75)
shape = SubResource("CircleShape2D_j62ag")

[node name="state_machine_first_boss" type="Node" parent="." node_paths=PackedStringArray("initial_state", "Enemigo", "position2D")]
script = ExtResource("3_icmwx")
initial_state = NodePath("second_phase_initial_state_boss_first_boss")
Enemigo = NodePath("..")
position2D = NodePath("../position2D")

[node name="first_phase_initial_state_boss_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("first_phase_to_attack_timer")]
script = ExtResource("4_yhj2j")
first_phase_to_attack_timer = NodePath("../../first_phase_to_attack_timer")

[node name="first_phase_attack1_state_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("first_phase_to_window", "attack_1_lines")]
script = ExtResource("5_w7trb")
first_phase_to_window = NodePath("../../first_phase_to_window")
attack_1_lines = NodePath("../../attack_1_lines")

[node name="first_phase_attack2_state_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("first_phase_to_window", "change_safe_areas_attack_2")]
script = ExtResource("6_sc8hq")
first_phase_to_window = NodePath("../../first_phase_to_window")
change_safe_areas_attack_2 = NodePath("../../change_safe_areas_attack_2")

[node name="first_phase_window_state_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("window_to_first_phase")]
script = ExtResource("7_gcbu5")
window_to_first_phase = NodePath("../../window_to_first_phase")

[node name="break_ceiling_state_first_boss" type="Node" parent="state_machine_first_boss"]
script = ExtResource("8_3irob")

[node name="break_platforms_state_first_boss" type="Node" parent="state_machine_first_boss"]
script = ExtResource("9_686sj")

[node name="second_phase_initial_state_boss_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("second_phase_to_attack_timer")]
script = ExtResource("10_4gku6")
second_phase_to_attack_timer = NodePath("../../second_phase_to_attack_timer")

[node name="second_phase_run_state_boss_first_boss" type="Node" parent="state_machine_first_boss"]
script = ExtResource("13_7we24")

[node name="second_phase_attack1_state_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("attack_to_second_phase")]
script = ExtResource("11_g318s")
attack_to_second_phase = NodePath("../../attack_to_second_phase")

[node name="second_phase_attack2_state_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("attack_to_second_phase")]
script = ExtResource("12_c31r0")
attack_to_second_phase = NodePath("../../attack_to_second_phase")

[node name="second_phase_attack3_state_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("attack_to_second_phase")]
script = ExtResource("13_qi5qb")
attack_to_second_phase = NodePath("../../attack_to_second_phase")

[node name="second_phase_attack4_state_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("attack_to_second_phase")]
script = ExtResource("14_3q7rr")
attack_to_second_phase = NodePath("../../attack_to_second_phase")

[node name="second_phase_window_state_first_boss" type="Node" parent="state_machine_first_boss" node_paths=PackedStringArray("window_to_first_phase")]
script = ExtResource("15_2bcf7")
window_to_first_phase = NodePath("../../window_to_first_phase")

[node name="dead_state_first_boss" type="Node" parent="state_machine_first_boss"]
script = ExtResource("16_cf043")

[node name="second_phase_to_attack_timer" type="Timer" parent="."]
one_shot = true

[node name="attack_1_lines" type="Timer" parent="."]
one_shot = true

[node name="change_safe_areas_attack_2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="first_phase_to_window" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="window_to_first_phase" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="wait_attack2_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="attack_to_second_phase" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 27)
shape = SubResource("RectangleShape2D_6dwlc")

[connection signal="body_entered" from="run_area" to="state_machine_first_boss/second_phase_initial_state_boss_first_boss" method="_on_run_area_body_entered"]
[connection signal="body_entered" from="first_phase_attack2_area" to="state_machine_first_boss/first_phase_attack2_state_first_boss" method="_on_first_phase_attack_2_area_body_entered"]
[connection signal="body_exited" from="first_phase_attack2_area" to="state_machine_first_boss/first_phase_attack2_state_first_boss" method="_on_first_phase_attack_2_area_body_exited"]
